--- a/404.html
+++ b/404.html
@@ -20,5 +20,5 @@ layout: home
   <h1>404</h1>
 
   <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p>It is fine.</p>
 </div>
